--- a/app/src/main/res/layout/rv_item_call.xml
+++ b/app/src/main/res/layout/rv_item_call.xml
@@ -22,17 +22,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="@dimen/item_height">
 
     <cn.carbs.android.avatarimageview.library.AvatarImageView
         android:id="@+id/avatar_image_invisible"
         android:visibility="invisible"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/padding_between_elements"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:scaleType="centerInside"
         app:aiv_CornerRadius="20dp"
         app:aiv_ShowBoarder="false"
@@ -40,35 +39,39 @@
 
     <cn.carbs.android.avatarimageview.library.AvatarImageView
         android:id="@+id/avatar_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/padding_between_elements"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:scaleType="centerInside"
         app:aiv_CornerRadius="20dp"
         app:aiv_ShowBoarder="false"
         app:aiv_TextSizeRatio="0.5"/>
 
-    <TextView
-        android:id="@+id/name_text"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/avatar_image"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/padding_between_elements"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_toEndOf="@id/avatar_image"/>
-
-    <TextView
-        android:id="@+id/timestamp_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name_text"
+        android:layout_centerInParent="true"
         android:layout_toEndOf="@id/avatar_image"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/padding_between_elements"
-        android:layout_marginTop="@dimen/padding_between_elements"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceListItem"/>
+
+        <TextView
+            android:id="@+id/timestamp_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:textColor="?android:attr/textColorSecondary"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
