--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -22,18 +22,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/item_height"
                 android:orientation="vertical">
 
     <cn.carbs.android.avatarimageview.library.AvatarImageView
         android:id="@+id/avatar_image_invisible"
         android:visibility="invisible"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/padding_between_elements"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:scaleType="centerInside"
         app:aiv_CornerRadius="20dp"
         app:aiv_ShowBoarder="false"
@@ -41,12 +40,11 @@
 
     <cn.carbs.android.avatarimageview.library.AvatarImageView
         android:id="@+id/avatar_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/padding_between_elements"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:scaleType="centerInside"
         app:aiv_CornerRadius="20dp"
         app:aiv_ShowBoarder="false"
@@ -57,10 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:ellipsize="end"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/padding_between_elements"
+        android:textAppearance="?android:attr/textAppearanceListItem"
         android:layout_toEndOf="@id/avatar_image"/>
-
 
 </RelativeLayout>
