--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -3,7 +3,9 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
+  ~ @author Andy Scherzinger
   ~ Copyright (C) 2017 Mario Danic
+  ~ Copyright (C) 2017 Andy Scherzinger
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -21,6 +23,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_height"
                 android:orientation="vertical">
@@ -58,6 +61,7 @@
         android:ellipsize="end"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:textAppearance="?android:attr/textAppearanceListItem"
-        android:layout_toEndOf="@id/avatar_image"/>
+        android:layout_toEndOf="@id/avatar_image"
+        tools:text="Contact item text"/>
 
 </RelativeLayout>
