--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:scaleType="centerInside"
-        app:aiv_CornerRadius="20dp"
+        app:aiv_CornerRadius="@dimen/avatar_corner_radius"
         app:aiv_ShowBoarder="false"
         app:aiv_TextSizeRatio="0.5"/>
 
@@ -49,7 +49,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:scaleType="centerInside"
-        app:aiv_CornerRadius="20dp"
+        app:aiv_CornerRadius="@dimen/avatar_corner_radius"
         app:aiv_ShowBoarder="false"
         app:aiv_TextSizeRatio="0.5"/>
 
