--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="padding_between_elements">8dp</dimen>
     <dimen name="margin_between_elements">8dp</dimen>
     <dimen name="avatar_size">40dp</dimen>
+    <dimen name="avatar_corner_radius">20dp</dimen>
 
 </resources>
