changed timestamp to relative value
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/rv_item_call.xml
+++ b/app/src/main/res/layout/rv_item_call.xml
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:textColor="?android:attr/textColorSecondary"
-            tools:text="30/12/2017 12:30am"/>
+            tools:text="A week ago"/>
 
     </LinearLayout>
 
