--- a/app/src/main/res/layout/controller_generic_rv.xml
+++ b/app/src/main/res/layout/controller_generic_rv.xml
@@ -24,7 +24,7 @@
                                               android:id="@+id/swipe_refresh_layout"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
-                                              android:background="@color/background_color">
+                                              android:background="@color/nc_background_color">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
