Improve settings & Update webrtc stuff
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -63,13 +63,22 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/avatar_image"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="@dimen/margin_between_elements"/>
+                android:layout_marginTop="@dimen/margin_between_elements"/>
+
+            <TextView
+                android:id="@+id/base_url_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/display_name_text"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="4dp"/>
+
 
             <com.yarolegovich.mp.MaterialStandardPreference
                 android:id="@+id/settings_switch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/display_name_text"
+                android:layout_below="@id/base_url_text"
                 android:tag="switchAccountButton"
                 apc:mp_title="@string/nc_settings_switch_account"/>
 
