--- a/app/src/main/res/layout/surface_renderer.xml
+++ b/app/src/main/res/layout/surface_renderer.xml
@@ -21,8 +21,10 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                 android:id="@+id/relative_layout"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_columnWeight="1"
+                                android:layout_rowWeight="1"
                                 android:orientation="vertical">
 
     <org.webrtc.SurfaceViewRenderer
