Improve menu layout
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/rv_item_menu.xml
+++ b/app/src/main/res/layout/rv_item_menu.xml
@@ -28,6 +28,7 @@
         android:id="@+id/menu_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_between_elements"/>
+        android:layout_margin="@dimen/margin_between_elements"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
