--- a/app/src/main/res/layout/rv_item_call.xml
+++ b/app/src/main/res/layout/rv_item_call.xml
@@ -75,6 +75,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/margin_between_elements"
-        android:background="@drawable/ic_more_horiz_black_24dp"/>
+        android:background="@drawable/ic_more_horiz_black_24dp"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
