--- a/app/src/main/res/layout/surface_renderer.xml
+++ b/app/src/main/res/layout/surface_renderer.xml
@@ -38,7 +38,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_margin="8dp"
-            android:textColor="@color/nc_white_color_complete"
-            android:visibility="visible"/>
+            android:textColor="@color/nc_white_color_complete"/>
 
 </RelativeLayout>
