--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -27,12 +27,18 @@
                 android:fitsSystemWindows="true"
                 tools:context=".activities.CallActivity">
 
+    <org.webrtc.SurfaceViewRenderer
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/full_screen_surface_view"/>
+
     <LinearLayout
         android:id="@+id/remote_renderers_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="invisible">
     </LinearLayout>
 
     <org.webrtc.SurfaceViewRenderer
@@ -41,6 +47,7 @@
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
