--- a/app/src/main/res/layout/controller_server_selection.xml
+++ b/app/src/main/res/layout/controller_server_selection.xml
@@ -33,8 +33,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
         android:scaleType="fitXY"
-        app:srcCompat="@drawable/ic_logo"
-        />
+        app:srcCompat="@drawable/ic_logo"/>
 
     <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
         android:id="@+id/text_field_boxes"
@@ -56,7 +55,6 @@
             android:layout_height="match_parent"
             android:imeOptions="actionDone"
             android:inputType="textUri"
-            android:textSize="12sp"
             android:minWidth="5dp"
             android:singleLine="true"
             android:textColor="@color/nc_white_color_complete"/>
@@ -75,8 +73,8 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="24dp"
         android:indeterminate="true"
-        android:progressDrawable="@color/nc_white_color_complete"
-        android:progressTint="@color/nc_white_color_complete"
+        android:indeterminateTintMode="src_in"
+        android:indeterminateTint="@color/nc_white_color_complete"
         android:visibility="invisible"/>
 
 </RelativeLayout>
