--- a/app/src/main/res/layout/controller_server_selection.xml
+++ b/app/src/main/res/layout/controller_server_selection.xml
@@ -27,11 +27,12 @@
                 android:fitsSystemWindows="true">
 
     <ImageView
+        android:id="@+id/image_logo"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:layout_above="@id/text_field_boxes"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
+        android:layout_marginTop="108dp"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/ic_logo"/>
 
@@ -39,11 +40,12 @@
         android:id="@+id/text_field_boxes"
         android:layout_width="wrap_content"
         android:layout_height="72dp"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/image_logo"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
+        app:labelText="@string/nc_server_url"
         app:errorColor="@color/nc_white_color_complete"
         app:helperText=" "
         app:panelBackgroundColor="@color/colorPrimary"
