--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -13,4 +13,5 @@
     <string name="nc_privacy_url">https://nextcloud.com/privacy/</string>
     <string name="nc_gpl3_url">https://www.gnu.org/licenses/gpl-3.0.en.html</string>
     <string name="nc_source_code_url">https://github.com/nextcloud/talk-android</string>
+    <string name="nc_providers_url">https://nextcloud.com/providers</string>
 </resources>
