Change color for providers text
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="nc_darkRed">#D32F2F</color>
     <color name="nc_white_color">@color/per70white</color>
     <color name="nc_white_color_complete">#FFFFFF</color>
+    <color name="nc_light_blue_color">#7fC0E3</color>
+
 </resources>
 
